# alexandria

./: .gitignore  README.md
.github/workflows/: terraform.yaml
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
scripts/: init_db.sh
service/alexandria/: Cargo.toml  justfile
service/alexandria/src/: dynamodb.rs  lambda.rs  lib.rs  main.rs  responses.rs
service/alexandria/src/fixtures/: apigw_request_get.json  apigw_request_post.json
