[package]
name = "alexandria"
version = "0.1.0"
edition = "2021"


[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
env_logger = "0.10.0"
lambda_http = { version = "0.7", default-features = false, features = [
  "apigw_rest",
] }
lambda_runtime = "0.7"
log = "0.4.17"
serde = "1.0.152"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
serde_json = "1.0.91"
strum = "0.25.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
